[package]
name = "jsonr"
description = "Regularize (prettify) JSON from JS/TS for debugging"
version = "0.1.0"
license = "MIT"
edition = "2021"
autotests = false
homepage = "https://github.com/matthewjablack/jsonr"
repository = "https://github.com/matthewjablack/jsonr"
autobins = false
rust-version = "1.76.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
colored = "2.0"
clap = { version = "4.4.2", features = ["derive"] }

[[bin]]
name = "jsonr"
path = "src/main.rs"
